--- a/tensorflow/lite/micro/tools/make/Makefile
+++ b/tensorflow/lite/micro/tools/make/Makefile
@@ -363,210 +363,9 @@ include $(MAKEFILE_DIR)/sources.inc
 # 5. Third-Party & Specialization Logic
 # ==============================================================================
 
-THIRD_PARTY_CC_SRCS :=
-THIRD_PARTY_KERNEL_CC_SRCS :=
-
-# Load custom kernels.
-include $(MAKEFILE_DIR)/additional_kernels.inc
+include $(MAKEFILE_DIR)/third_party.inc
 
 MICROLITE_CC_SRCS := $(filter-out $(MICROLITE_TEST_SRCS), $(MICROLITE_CC_BASE_SRCS))
-MICROLITE_CC_SRCS := $(filter-out $(MICROLITE_BENCHMARK_SRCS), $(MICROLITE_CC_SRCS))
-
-
-
-# The download scripts require that the downloads directory already exist for
-# improved error checking. To accomodate that, we first create a downloads
-# directory.
-$(shell $(MKDIR_P) $(DOWNLOADS_DIR))
-
-# Directly download the flatbuffers library.
-DOWNLOAD_RESULT := $(shell $(MAKEFILE_DIR)/flatbuffers_download.sh $(DOWNLOADS_DIR) $(TENSORFLOW_ROOT))
-ifneq ($(DOWNLOAD_RESULT), SUCCESS)
-  $(error Something went wrong with the flatbuffers download: $(DOWNLOAD_RESULT))
-endif
-
-DOWNLOAD_RESULT := $(shell $(MAKEFILE_DIR)/kissfft_download.sh $(DOWNLOADS_DIR) $(TENSORFLOW_ROOT))
-ifneq ($(DOWNLOAD_RESULT), SUCCESS)
-  $(error Something went wrong with the kissfft download: $(DOWNLOAD_RESULT))
-endif
-
-DOWNLOAD_RESULT := $(shell $(MAKEFILE_DIR)/pigweed_download.sh $(DOWNLOADS_DIR) $(TENSORFLOW_ROOT))
-ifneq ($(DOWNLOAD_RESULT), SUCCESS)
-  $(error Something went wrong with the pigweed download: $(DOWNLOAD_RESULT))
-endif
-
-include $(MAKEFILE_DIR)/third_party_downloads.inc
-THIRD_PARTY_DOWNLOADS :=
-$(eval $(call add_third_party_download,$(GEMMLOWP_URL),$(GEMMLOWP_MD5),gemmlowp,))
-$(eval $(call add_third_party_download,$(RUY_URL),$(RUY_MD5),ruy,))
-
-# The target-specific makefile must have a name that is exactly
-# TARGET_makefile.inc and is only needed for cross-compilation (i.e. when TARGET
-# is different from the HOST_OS).
-TARGETS_WITHOUT_MAKEFILES := \
-$(HOST_OS)
-
-# This specific string needs to be outputted for a test to be recognized as
-# having passed.
-TEST_PASS_STRING := '~~~ALL TESTS PASSED~~~'
-
-# $(TARGET)_makefile.inc can set this to true to allow it to defined a custom
-# implementation for `make test`. See bluepill_makefile as an example.
-TARGET_SPECIFIC_MAKE_TEST := 0
-
-ifeq ($(findstring $(TARGET),$(TARGETS_WITHOUT_MAKEFILES)),)
-  include $(MAKEFILE_DIR)/targets/$(TARGET)_makefile.inc
-endif
-
-# Validate valid options.
-ifeq (,$(filter $(OPTIMIZE_KERNELS_FOR),KERNELS_OPTIMIZED_FOR_SPEED KERNELS_OPTIMIZED_FOR_SIZE))
-    $(error Incorrect OPTIMIZE_KERNELS_FOR: $(OPTIMIZE_KERNELS_FOR))
-endif
-
-ifneq ($(OPTIMIZED_KERNEL_DIR),)
-  PATH_TO_OPTIMIZED_KERNELS := $(OPTIMIZED_KERNEL_DIR_PREFIX)/$(OPTIMIZED_KERNEL_DIR)
-  PATH_TO_SIGNAL_OPTIMIZED_KERNELS := $(OPTIMIZED_SIGNAL_KERNEL_DIR_PREFIX)/$(OPTIMIZED_KERNEL_DIR)
-
-  # Check that OPTIMIZED_KERNEL_DIR is valid to avoid unexpected fallback to
-  # reference kernels. See http://b/183546742 for more context.
-  RESULT := $(shell $(MAKEFILE_DIR)/check_optimized_kernel_dir.sh $(PATH_TO_OPTIMIZED_KERNELS))
-  ifneq ($(RESULT), SUCCESS)
-    $(error Incorrect OPTIMIZED_KERNEL_DIR: $(RESULT))
-  endif
-
-  include $(MAKEFILE_DIR)/ext_libs/$(OPTIMIZED_KERNEL_DIR).inc
-  # Specialize for the optimized kernels
-  MICROLITE_CC_KERNEL_SRCS := $(shell python3 $(MAKEFILE_DIR)/specialize_files.py \
-		--base_files "$(MICROLITE_CC_KERNEL_SRCS)" \
-		--specialize_directory $(PATH_TO_OPTIMIZED_KERNELS))
-
-  ifneq ($(filter $(OPTIMIZED_KERNEL_DIR), xtensa hexagon),)
-    # Check that OPTIMIZED_KERNEL_DIR is valid to avoid unexpected fallback to
-    # reference kernels. See http://b/183546742 for more context.
-    RESULT := $(shell $(MAKEFILE_DIR)/check_optimized_kernel_dir.sh $(PATH_TO_SIGNAL_OPTIMIZED_KERNELS))
-    ifneq ($(RESULT), SUCCESS)
-      $(error Incorrect SIGNAL OPTIMIZED_KERNEL_DIR: $(RESULT))
-    endif
-
-    # Specialize for the optimized kernels
-    MICROLITE_CC_SIGNAL_KERNEL_SRCS := $(shell python3 $(MAKEFILE_DIR)/specialize_files.py \
-      --base_files "$(MICROLITE_CC_SIGNAL_KERNEL_SRCS)" \
-      --specialize_directory $(PATH_TO_SIGNAL_OPTIMIZED_KERNELS))
-    MICROLITE_CC_KERNEL_SRCS += $(wildcard $(PATH_TO_SIGNAL_OPTIMIZED_KERNELS)/*.S)
-    MICROLITE_CC_HDRS += $(wildcard $(PATH_TO_SIGNAL_OPTIMIZED_KERNELS)/*.h)
-  endif
-
-  # The first ifneq is needed to be compatible with make versions prior to 4.2
-  # which do not support .SHELLSTATUS. While make 4.2 was released in 2016,
-  # Ubuntu 18.04 only has version 4.1
-  ifneq ($(.SHELLSTATUS),)
-    ifneq ($(.SHELLSTATUS),0)
-      $(error Error with specialize_files.py $(MICROLITE_CC_KERNEL_SRCS))
-    endif
-  endif
-
-  # Optimized kernel directories can have their own header files which need to
-  # be included in MICROLITE_CC_HDRS for project generation to have a complete
-  # list of headers.
-  MICROLITE_CC_HDRS += $(wildcard $(PATH_TO_OPTIMIZED_KERNELS)/*.h)
-endif
-
-MICROLITE_CC_KERNEL_SRCS += $(MICROLITE_CC_SIGNAL_KERNEL_SRCS)
-
-# If a co-processor is specified on the command line with
-# CO_PROCESSOR=<co_processor> then we will include ext_libs/<co_processor>.inc
-# and find additional kernel sources in kernels/<co_processor>/
-#
-# That the co-processor specialization of the kernel sources happens after the
-# optimized_kernel_dir means that if there is an implementation of the same
-# kernel in both directories, the one from co_processor will be used.
-ifneq ($(CO_PROCESSOR),)
-  include $(MAKEFILE_DIR)/ext_libs/$(CO_PROCESSOR).inc
-  # Specialize for the coprocessor kernels.
-  PATH_TO_COPROCESSOR_KERNELS := $(TENSORFLOW_ROOT)tensorflow/lite/micro/kernels/$(CO_PROCESSOR)
-  MICROLITE_CC_KERNEL_SRCS := $(shell python3 $(MAKEFILE_DIR)/specialize_files.py \
-    --base_files "$(MICROLITE_CC_KERNEL_SRCS)" \
-    --specialize_directory $(PATH_TO_COPROCESSOR_KERNELS))
-
-  # The first ifneq is needed to be compatible with make versions prior to 4.2
-  # which do not support .SHELLSTATUS. While make 4.2 was released in 2016,
-  # Ubuntu 18.04 only has version 4.1
-  ifneq ($(.SHELLSTATUS),)
-    ifneq ($(.SHELLSTATUS),0)
-      $(error Error with specialize_files.py $(MICROLITE_CC_KERNEL_SRCS))
-    endif
-  endif
-endif
-
-# Specialize for debug_log. micro_time etc.
-PATH_TO_TARGET_SRCS := $(TENSORFLOW_ROOT)tensorflow/lite/micro/$(TARGET)
-MICROLITE_CC_SRCS := $(shell python3 $(MAKEFILE_DIR)/specialize_files.py \
-  --base_files "$(MICROLITE_CC_SRCS)" \
-  --specialize_directory $(PATH_TO_TARGET_SRCS))
-
-# The first ifneq is needed to be compatible with make versions prior to 4.2
-# which do not support .SHELLSTATUS. While make 4.2 was released in 2016,
-# Ubuntu 18.04 only has version 4.1
-ifneq ($(.SHELLSTATUS),)
-  ifneq ($(.SHELLSTATUS),0)
-    $(error Error with specialize_files.py $(MICROLITE_CC_SRCS))
-  endif
-endif
-
-ALL_SRCS := \
-	$(MICROLITE_CC_SRCS) \
-	$(MICROLITE_CC_KERNEL_SRCS) \
-	$(MICROLITE_TEST_SRCS)
-
-# ==============================================================================
-# 6. Build Rules and Targets
-# ==============================================================================
-
-.PHONY: all microlite build test integration_tests generated_micro_mutable_op_resolver \
-        clean clean_downloads list_gendir list_library_sources list_library_headers \
-        list_third_party_sources list_third_party_headers list_generator_dir \
-        third_party_downloads
-
-MICROLITE_LIB_PATH := $(LIBDIR)$(MICROLITE_LIB_NAME)
-
-CXX := $(TARGET_TOOLCHAIN_ROOT)$(TARGET_TOOLCHAIN_PREFIX)$(CXX_TOOL)
-CC := $(TARGET_TOOLCHAIN_ROOT)$(TARGET_TOOLCHAIN_PREFIX)$(CC_TOOL)
-AR := $(TARGET_TOOLCHAIN_ROOT)$(TARGET_TOOLCHAIN_PREFIX)$(AR_TOOL)
-
-# The default Makefile target(all) must appear before any target,
-# which is compiled if there's no command-line arguments.
-all: $(MICROLITE_LIB_PATH)
-
-# Include output directory since example cc files depend on generated headers.
-INCLUDES += -I$(GENERATED_SRCS_DIR)
-INCLUDES += -I$(GENERATED_SRCS_DIR)$(TENSORFLOW_ROOT)
-
-# Load the examples.
-include $(MICRO_LITE_EXAMPLE_TESTS)
-
-# Load the integration tests.
-include $(MICRO_LITE_INTEGRATION_TESTS)
-
-# Load generated micro mutable op resolver test.
-include $(MICRO_LITE_GEN_MUTABLE_OP_RESOLVER_TEST)
-
-# Load layer_by_layer_output_tool
-ifneq ($(TARGET), $(filter $(TARGET), \
-  bluepill cortex_m_corstone_300 riscv32_generic hexagon))
-include $(MICRO_LITE_LAYER_BY_LAYER_OUTPUT)
-endif
-
-# Load the benchmarks.
-include $(OLD_MICRO_LITE_BENCHMARKS)
-include $(MICRO_LITE_BENCHMARKS)
-
-# Load custom kernel tests.
-include $(MAKEFILE_DIR)/additional_tests.inc
-
-# Create rules for downloading third-party dependencies.
-THIRD_PARTY_TARGETS :=
-$(foreach DOWNLOAD,$(THIRD_PARTY_DOWNLOADS),$(eval $(call create_download_rule,$(DOWNLOAD))))
-third_party_downloads: $(THIRD_PARTY_TARGETS)
 
 MICROLITE_LIB_OBJS := $(addprefix $(CORE_OBJDIR), \
 $(patsubst %.S,%.o,$(patsubst %.cc,%.o,$(patsubst %.c,%.o,$(MICROLITE_CC_SRCS)))))
