--- a/tensorflow/lite/python/BUILD
+++ b/tensorflow/lite/python/BUILD
@@ -1,6 +1,6 @@
-load("@flatbuffers//:build_defs.bzl", "flatbuffer_py_library")
 load("@rules_python//python:defs.bzl", "py_library")
 load("@tflm_pip_deps//:requirements.bzl", "requirement")
+load("//third_party/flatbuffers:build_defs.bzl", "flatbuffer_py_library")
 
 package(
     default_visibility = [
