--- a/tensorflow/lite/micro/tools/make/Makefile
+++ b/tensorflow/lite/micro/tools/make/Makefile
@@ -647,7 +647,7 @@ config_info:
 	@echo "  OPTIMIZED_KERNEL_DIR: $(OPTIMIZED_KERNEL_DIR)"
 	@echo "  CO_PROCESSOR: $(CO_PROCESSOR)"
 	@echo "  TARGET_TOOLCHAIN_ROOT: $(TARGET_TOOLCHAIN_ROOT)"
-	@echo "  INCLUDES (first 5): $(wordlist 1,5,$(INCLUDES))"
-	@echo "  THIRD_PARTY_DOWNLOADS (first 5): $(wordlist 1,5,$(THIRD_PARTY_DOWNLOADS))"
-	@echo "  MICROLITE_BENCHMARK_SRCS (count): $(words $(MICROLITE_BENCHMARK_SRCS))"
-	@echo "  MICROLITE_TEST_SRCS (count): $(words $(MICROLITE_TEST_SRCS))"
+	@echo "  INCLUDES: $(INCLUDES)"
+	@echo "  THIRD_PARTY_DOWNLOADS: $(THIRD_PARTY_DOWNLOADS)"
+	@echo "  MICROLITE_BENCHMARK_SRCS: $(MICROLITE_BENCHMARK_SRCS)"
+	@echo "  MICROLITE_TEST_SRCS: $(MICROLITE_TEST_SRCS)"
