feat(compression): add DECODE operator types and metadata
Add decode module with DecodeType constants and DecodeCommonMetadata,
per the TFLM DECODE Operator Design document.

BUG=implements #3256

--- a/tensorflow/lite/micro/compression/BUILD
+++ b/tensorflow/lite/micro/compression/BUILD
@@ -225,6 +225,21 @@ py_test(
     ],
 )
 
+py_library(
+    name = "decode",
+    srcs = ["decode.py"],
+)
+
+py_test(
+    name = "decode_test",
+    size = "small",
+    srcs = ["decode_test.py"],
+    deps = [
+        ":decode",
+        requirement("tensorflow"),
+    ],
+)
+
 py_binary(
     name = "view",
     srcs = [
